package SmartHome.domain.valueObjects.zipCountries;

public interface ZipCodeValidator {
    boolean validateZipCode(String zipCode);
}
